  * Added external function annotations %ann:propagates-input-nodes and 
    %ann:must-copy-input-nodes to be used by the no-copy optimization.
  * Caching of results for recursive functions with atomic parameter and return types.
  * Added %ann:cache and %ann:no-cache to enable or disable caching of results of functions with atomic parameter and return types.
  * Fixed bug 917923 (bug in copying outer var values into the eval dynamic context)
  * Fixed bug 924063 (sentence is incorrectly incremented when token characters end without sentence terminator)
  * Optimization: change the implementation of the free-vars annotation and got rid
    of the annotations map in expressions.
  * Fixed bug 909126 (bug in cloning of var_expr)
  * Fixed bug in destruction of exit_catcher_expr
  * Types-related optimizations for runtime operators (comparisons, FnBoolean, Or, And,
    Compare, instance-of, cast, castable, treat, promote).
  * Fixed bug #911585 (management of variables during eval)
  * Fixed bug #866423 (fn:empty and fn:exists iterators must reset their input in
    case of early-out)
  * More efficient implementation for base64Binary items
  * Added index management function to the C++ api's StaticCollectionManager.
  * Fixed bug #872288 (reset recursive flag during node rename)
  * Fixed bug #905041 (allow for the default element and function namespaces to be
    set multiple times via the c++ api).
  * Fixed bug #907872 (segfault when returning an input ItemSequence from an external function).
  * Fixed bug #905050 (setting and getting the context item type via the c++ api).
  * Added createDayTimeDuration, createYearMonthDuration, createDocumentNode, createCommentNode, createPiNode to api's ItemFactory.
  * Fixed bug in codegen: do not create a materialize clause if one exists already
  * Added split function to the string module that allows for streamable tokenization but doesn't have regular expression
    support.