@@ -260,7 +260,7 @@ declare updating function dml:delete-nodes-first(
  : @return The result of this function is an empty XDM instance and a pending update
  :         list which, once applied, deletes the last node from the collection.
  :
- : @error zerr:ZDDY0009 If available collections does not provide a mapping
+ : @error zerr:ZDDY0003 If available collections does not provide a mapping
  :        for the expanded QName $name.
  : @error zerr:ZDDY0011 if the collection doesn't contain any node.
  :
@@ -278,7 +278,7 @@ declare updating function dml:delete-node-last($name as xs:QName) external;
  : @return The result of this function is an empty XDM instance and a pending update
  :         list which, once applied, deletes the last n nodes.
  :
- : @error zerr:ZDDY0009 If available collections does not provide a mapping
+ : @error zerr:ZDDY0003 If available collections does not provide a mapping
  :        for the expanded QName $name.
  : @error zerr:ZDDY0011 if the collection doesn't contain the given number of nodes.
  :
@@ -286,6 +286,21 @@ declare updating function dml:delete-node-last($name as xs:QName) external;
 declare updating function dml:delete-nodes-last(
   $name as xs:QName,
   $number as xs:integer) external;
+
+(:~
+ : The truncate function is an updating function that deletes the
+ : entire contents of collection.
+ :
+ : @param $name The name of the collection whose content to delete
+ :
+ : @return The result of this function is an empty XDM instance and a pending update
+ :         list which, once applied, deletes the nodes.
+ :
+ : @error zerr:ZDDY0003 If available collections does not provide a mapping
+ :        for the expanded QName $name.
+ :
+ :)
+declare updating function cdml:truncate($name as xs:QName) external;
 
 (:~
  : The index-of function return the index of the given node in the collection.
@@ -307,7 +322,7 @@ declare function dml:index-of($node as node()) as xs:integer external;
  :
  : @return The sequence contained in the given collection.
  :
- : @error zerr:ZDDY0009 If available collections does not provide a mapping
+ : @error zerr:ZDDY0003 If available collections does not provide a mapping
  :        for the expanded QName $name.
  :
  :)
