@@ -409,6 +409,22 @@ declare updating function cdml:delete-nodes-last(
   $number as xs:integer)  external;
 
 (:~
+ : The truncate function is an updating function that deletes the
+ : entire contents of collection.
+ :
+ : @param $name The name of the collection whose content to delete
+ :
+ : @return The result of this function is an empty XDM instance and a pending update
+ :         list which, once applied, deletes the nodes.
+ :
+ : @error zerr:ZDDY0001 if the collection identified by $name is not declared.
+ : @error zerr:ZDDY0003 if the collection identified by $name is not available.
+ :
+ :)
+
+declare updating function cdml:truncate($name as xs:QName) external;
+
+(:~
  : The index-of function that returns the position of the node in its collection.
  :
  : @param $node The node to retrieve the index for.
