@@ -79,6 +79,8 @@
   ZORBA_STORE_COLLECTIONS_STATIC_DML_DELETE_NODES_LAST_2,
   ZORBA_STORE_DYNAMIC_COLLECTIONS_DML_DELETE_NODE_LAST_1,
   ZORBA_STORE_DYNAMIC_COLLECTIONS_DML_DELETE_NODES_LAST_2,
+  ZORBA_STORE_COLLECTIONS_STATIC_DML_TRUNCATE_1,
+  ZORBA_STORE_DYNAMIC_COLLECTIONS_DML_TRUNCATE_1,
   ZORBA_STORE_COLLECTIONS_STATIC_DML_COLLECTION_NAME_1,
   ZORBA_STORE_DYNAMIC_COLLECTIONS_DML_COLLECTION_NAME_1,
   ZORBA_STORE_COLLECTIONS_STATIC_DDL_IS_AVAILABLE_COLLECTION_1,
