@@ -924,6 +924,52 @@
 /*******************************************************************************
 ********************************************************************************/
 -->
+<zorba:iterator name="ZorbaTruncateCollectionIterator" >
+
+    <zorba:description author="Zorba Team">
+      zorba:truncate
+    </zorba:description>
+
+    <zorba:function generateCodegen="false">
+
+      <zorba:signature localname="truncate" prefix="zorba-store-collections-static-dml">
+        <zorba:param>xs:QName</zorba:param>
+        <zorba:output>empty-sequence()</zorba:output>
+      </zorba:signature>
+
+      <zorba:signature localname="truncate" prefix="zorba-store-dynamic-collections-dml">
+        <zorba:param>xs:QName</zorba:param>
+        <zorba:output>empty-sequence()</zorba:output>
+      </zorba:signature>
+
+      <zorba:methods>
+        <zorba:getScriptingKind returnValue="UPDATING_EXPR"/>
+        <zorba:accessesDynCtx returnValue="true"/>
+      </zorba:methods>
+
+    </zorba:function>
+
+    <zorba:constructor>
+      <zorba:parameter type="bool" name="aDynamicCollection" />
+    </zorba:constructor>
+
+    <zorba:member type="bool" name="theDynamicCollection"
+      brief="whether it's the function of the dynamic or the static collection module"/>
+
+    <zorba:method const="true" name="getCollection" return="const StaticallyKnownCollection*">
+      <zorba:param type="const static_context*" name="sctx"/>
+      <zorba:param type="const store::Item_t&amp;" name="name"/>
+      <zorba:param type="const QueryLoc&amp;" name="loc"/>
+      <zorba:param type="bool" name="dyn_coll"/>
+      <zorba:param type="store::Collection_t&amp;" name="coll"/>
+    </zorba:method>
+</zorba:iterator>
+
+
+<!--
+/*******************************************************************************
+********************************************************************************/
+-->
 <zorba:iterator name="ZorbaCollectionNameIterator" >
 
     <zorba:description author="Zorba Team">
