@@ -10,6 +10,7 @@ version 2.2
     %ann:must-copy-input-nodes to be used by the no-copy optimization.
   * Caching of results for recursive functions with atomic parameter and return types.
   * Added %ann:cache and %ann:no-cache to enable or disable caching of results of functions with atomic parameter and return types.
+  * Added truncate function to the collection modules for efficient deletion of all nodes in a collection.
   * Fixed bug 917923 (bug in copying outer var values into the eval dynamic context)
   * Fixed bug 924063 (sentence is incorrectly incremented when token characters end without sentence terminator)
   * Optimization: change the implementation of the free-vars annotation and got rid
